--- a/README.html
+++ b/README.html
@@ -182,18 +182,18 @@
 			<td>
 				<ol>
 					<li><h3><i style="color:gray;">pathcfg</i>: The path to configuring file below.</h1>
-						<!--a href="https://github.com/thuanalg/simplelog-topic/blob/master/image/config.PNG">Image</a-->
-						<div style="color:gray;"><i>## ------------------------------------------------------------------------------</i></div>
+						<a href="https://github.com/thuanalg/simplelog-topic/blob/main/src/simplelog.cfg">simplelog.cfg</a>
+						<!--div style="color:gray;"><i>## ------------------------------------------------------------------------------</i></div>
 						<div style="color:gray;"><i>#pathfoder: the folder to write log</i></div>
 						<div style="color:green;">pathfoder=log_simple</div>
-						<div style="color:gray;"><i>#level: 0-->> debug, 70: Info, 80: warning, 90: err, 100: Fatal</i></div>
+						<div style="color:gray;"><i>#level: 0-- >> debug, 70: Info, 80: warning, 90: err, 100: Fatal</i></div>
 						<div style="color:green;">level=0</div>
 						<div style="color:gray;"><i>#buffsize(byte): size of memory for simple log, 1(MB)</i></div>
 						<div style="color:green;">buffsize=1000000</div>
 						<div style="color:gray;"><i>#rotation_size(byte): size of each of log files, 10(MB)</i></div>
 						<div style="color:green;">rotation_size=10000000</div>
 						<div style="color:gray;"><i>#end_configuring: Put in end of this file to read configuring file no more</i></div>
-						<div style="color:green;">end_configuring=1</div>
+						<div style="color:green;">end_configuring=1</div-->
 					</li>
 				</ol>
 			</td>
